fusion des routes get/projects avec get/projects/statusByJobs
