# routes/projects/index.js
@@ -29,12 +29,6 @@ router.get('/projects',
   pgClient.close,
   returnMsg);
 
-router.get('/projects/statusByJobs',
-  pgClient.open,
-  project.getStatusByJobs,
-  pgClient.close,
-  returnMsg);
-
 router.get('/projects/status',
   pgClient.open,
   project.getProjectStatus,
